--- a/sliderule_dsi_inferential_statistics_exercise_3.ipynb
+++ b/sliderule_dsi_inferential_statistics_exercise_3.ipynb
@@ -159,10 +159,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "****\n",
-    "<div class=\"span5 alert alert-info\">\n",
-    "### Exercise\n",
-    "\n",
+    "# Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Include your work on the following **in this notebook and submit to your Github account**. \n",
     "\n",
     "A. Do you agree with the above analysis and recommendations? Why or why not?\n",
@@ -181,9 +184,7 @@
     "\n",
     "You can compose in notebook cells using Markdown: \n",
     "+ In the control panel at the top, choose Cell > Cell Type > Markdown\n",
-    "+ Markdown syntax: http://nestacms.com/docs/creating-content/markdown-cheat-sheet\n",
-    "</div>\n",
-    "****"
+    "+ Markdown syntax: http://nestacms.com/docs/creating-content/markdown-cheat-sheet"
    ]
   },
   {
