--- a/linear_regression/Mini_Project_Linear_Regression.ipynb
+++ b/linear_regression/Mini_Project_Linear_Regression.ipynb
@@ -71,7 +71,6 @@
     "# Part 1: Linear Regression\n",
     "### Purpose of linear regression\n",
     "***\n",
-    "<div class=\"span5 alert alert-info\">\n",
     "\n",
     "<p> Given a dataset $X$ and $Y$, linear regression can be used to: </p>\n",
     "<ul>\n",
@@ -83,7 +82,7 @@
     "    </ul>\n",
     "   <li>Linear regression is used in so many applications that I won't warrant this with examples. It is in many cases, the first pass prediction algorithm for continuous outcomes. </li>\n",
     "</ul>\n",
-    "</div>\n",
+    "\n",
     "\n",
     "### A brief recap (feel free to skip if you don't care about the math)\n",
     "***\n",
@@ -2389,7 +2388,7 @@
     "\n",
     "## Other important things to think about when fitting a linear regression model\n",
     "***\n",
-    "<div class=\"span5 alert alert-danger\">\n",
+    "\n",
     "<ul>\n",
     "  <li>**Linearity**. The dependent variable $Y$ is a linear combination of the regression coefficients and the independent variables $X$. </li>\n",
     "  <li>**Constant standard deviation**. The SD of the dependent variable $Y$ should be constant for different values of X.  \n",
@@ -2407,7 +2406,7 @@
     "</li>\n",
     "</ul>  \n",
     "\n",
-    "</div>\n"
+    "\n"
    ]
   },
   {
@@ -2418,7 +2417,7 @@
     "\n",
     "### Purpose of splitting data into Training/testing sets\n",
     "***\n",
-    "<div class=\"span5 alert alert-info\">\n",
+    "\n",
     "\n",
     "<p> Let's stick to the linear regression example: </p>\n",
     "<ul>\n",
@@ -2430,7 +2429,7 @@
     "  <li> One simple solution, leave out some data (for <b>testing</b>) and <b>train</b> the model on the rest </li>\n",
     "  <li> This also leads directly to the idea of cross-validation, next section. </li>  \n",
     "</ul>\n",
-    "</div>\n",
+    "\n",
     "\n",
     "***\n",
     "\n",
@@ -2670,7 +2669,7 @@
    "source": [
     "### K-fold Cross-validation as an extension of this idea\n",
     "***\n",
-    "<div class=\"span5 alert alert-info\">\n",
+    "\n",
     "\n",
     "<p> A simple extension of the Test/train split is called K-fold cross-validation.  </p>\n",
     "\n",
@@ -2685,7 +2684,7 @@
     "    </ul>\n",
     "  <li> Calculate the average prediction error across all samples $Err_{CV} = \\frac{1}{n}\\sum_{i=1}^n (Y_i - \\hat{Y}_i)^2$ </li>\n",
     "</ul>\n",
-    "</div>\n",
+    "\n",
     "\n",
     "***\n",
     "\n",
@@ -2819,6 +2818,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
